# Pytest-Tutorials

./: .gitignore  README.md
2-parrallel-pytest/: README.md  pyproject.toml  pytest.ini  requirements.txt
2-parrallel-pytest/validation/: conftest.py  scenarios.py
2-parrallel-pytest/validation/features/: foodapi.feature  logging.feature
2-parrallel-pytest/validation/steps/: foodapi_steps.py
