[tool.poetry]
name = "2-parrallel-pytest"
version = "0.1.0"
description = ""
authors = ["DevPS-513 <developmentpersecond@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
